// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourtroomsFilterComponent should create the right templates with actions 1`] = `
<ng-component
  courtCentres={[Function Array]}
  formErrors={[Function Function]}
  onSelectCourtCentre={[Function Function]}
  onSubmit={[Function Function]}
  preselectedValues={[Function Object]}
>
  <courtrooms-filter>
    <div
      class="courtrooms-filter govuk-!-padding-3"
      pdk-padding="3"
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h2
          class="govuk-!-margin-bottom-1 govuk-heading-m"
          pdk-margin-bottom="1"
          pdk-typography="heading-medium"
        >
          Court calendar
        </h2>
      </pdk-grid>
      <form
        class="govuk-!-margin-top-1 ng-untouched ng-pristine ng-valid"
        data-test-id="courtCalendarFilters"
        novalidate=""
        pdk-form=""
        pdk-margin-top="1"
      >
        <pdk-grid
          class="govuk-grid-row"
          container=""
        >
          <pdk-grid
            class="govuk-grid-column-one-half"
            one-half=""
          >
            <pdk-grid
              class="govuk-grid-column-three-quarters"
              three-quarters=""
            >
              <pdk-form-field
                label="Court"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="pdk-form-control-undefined-GENERATED_ID"
                  >
                     Court 
                  </label>
                  <pdk-autosuggest-lite
                    class="ng-untouched ng-pristine ng-valid"
                    name="courtCentreId"
                    required=""
                  >
                    <pdk-autosuggest
                      highlightcolor="blue"
                    >
                      <pdk-interaction-container>
                        <div>
                          <div
                            class="pdk-autosuggest"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                              aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                              aria-expanded="false"
                              autocomplete="off"
                              class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                              id="pdk-form-control-undefined-GENERATED_ID"
                              role="combobox"
                              type="text"
                            />
                            <span
                              class="govuk-visually-hidden"
                              id="pdk-autosuggest__instructions-GENERATED_ID"
                              pdk-visually-hidden=""
                            >
                               When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                            </span>
                            <span
                              aria-live="polite"
                              class="govuk-visually-hidden"
                              pdk-visually-hidden=""
                              role="status"
                            >
                            </span>
                            <div
                              class="pdk-autosuggest__suggestions-container"
                              id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                            >
                            </div>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-autosuggest>
                  </pdk-autosuggest-lite>
                </pdk-form-group>
              </pdk-form-field>
              <pdk-form-field
                hint=""
                label="Date"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       Date 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 23 10 2017 
                      </div>
                    </pdk-hint>
                    <date-picker
                      class="ng-untouched ng-pristine ng-valid"
                      name="searchDate"
                      required=""
                    >
                      <div
                        class="datepicker"
                      >
                        <div
                          class="flex-column"
                        >
                          <pdk-date-input
                            class="ng-untouched ng-pristine ng-invalid"
                            name="datePicker"
                            picker=""
                            required=""
                          >
                            <pdk-interaction-container>
                              <div>
                                <div
                                  class="pdk-date-input"
                                >
                                  <div
                                    class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                  >
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-day"
                                        pdk-label=""
                                      >
                                         Day 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                        formcontrolname="day"
                                        id="searchDate-day"
                                        name="dateDay"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-month"
                                        pdk-label=""
                                      >
                                         Month 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                        formcontrolname="month"
                                        id="searchDate-month"
                                        name="dateMonth"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-year"
                                        pdk-label=""
                                      >
                                         Year 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                        formcontrolname="year"
                                        id="searchDate-year"
                                        name="dateYear"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="pdk-!-negative-margin-left-2"
                                    pdk-margin-left="-2"
                                  >
                                    <pdk-date-picker-toggle>
                                      <pdk-interaction-container>
                                        <div>
                                          <div
                                            aria-expanded="false"
                                            aria-label="Toggle date picker"
                                            class="pdk-date-picker__toggle"
                                            role="button"
                                            tabindex="0"
                                          >
                                            <pdk-date-picker-icon
                                              style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                            >
                                              <div
                                                style="display: flex; align-items: center; justify-content: center;"
                                              >
                                                <i
                                                  style="height: 28px; width: 28px; fill: #333;"
                                                >
                                                  <svg
                                                    viewBox="0 0 448 512"
                                                    xmlns="http://www.w3.org/2000/svg"
                                                  >
                                                    <path
                                                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                    />
                                                  </svg>
                                                </i>
                                              </div>
                                            </pdk-date-picker-icon>
                                          </div>
                                        </div>
                                      </pdk-interaction-container>
                                    </pdk-date-picker-toggle>
                                  </div>
                                </div>
                              </div>
                            </pdk-interaction-container>
                          </pdk-date-input>
                        </div>
                      </div>
                    </date-picker>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
          </pdk-grid>
          <pdk-grid
            class="govuk-grid-column-one-half"
            one-half=""
          >
            <pdk-grid
              class="govuk-grid-column-three-quarters"
              three-quarters=""
            >
              <pdk-form-field
                label="Courtroom"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="pdk-form-control-undefined-GENERATED_ID"
                  >
                     Courtroom 
                  </label>
                  <pdk-autosuggest-lite
                    class="ng-untouched ng-pristine ng-valid"
                    fullwidth=""
                    name="courtRoomId"
                  >
                    <pdk-autosuggest
                      highlightcolor="blue"
                    >
                      <pdk-interaction-container>
                        <div>
                          <div
                            class="pdk-autosuggest"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                              aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                              aria-expanded="false"
                              autocomplete="off"
                              class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                              id="pdk-form-control-undefined-GENERATED_ID"
                              role="combobox"
                              type="text"
                            />
                            <span
                              class="govuk-visually-hidden"
                              id="pdk-autosuggest__instructions-GENERATED_ID"
                              pdk-visually-hidden=""
                            >
                               When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                            </span>
                            <span
                              aria-live="polite"
                              class="govuk-visually-hidden"
                              pdk-visually-hidden=""
                              role="status"
                            >
                            </span>
                            <div
                              class="pdk-autosuggest__suggestions-container"
                              id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                            >
                            </div>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-autosuggest>
                  </pdk-autosuggest-lite>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
            <pdk-grid
              class="govuk-grid-column-one-half"
              one-half=""
            >
              <pdk-form-field
                hint=""
                label="Start time (optional)"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       Start time (optional) 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 10 30 
                      </div>
                    </pdk-hint>
                    <pdk-time-input
                      class="ng-untouched ng-pristine ng-valid"
                      data-role="courtroom-startTime"
                      labelhidden="false"
                      name="startTime"
                    >
                      <div
                        class="pdk-time-input ng-untouched ng-pristine ng-valid"
                      >
                        <div
                          class="pdk-time-input__item pdk-time-input__item--hour"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-hours"
                            pdk-label=""
                          >
                             Hours 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="hours"
                            id="pdk-time-input-GENERATED_ID-hours"
                            maxlength="2"
                            name="timeHours"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                        <div
                          class="pdk-time-input__item"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-minutes"
                            pdk-label=""
                          >
                             Minutes 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="minutes"
                            id="pdk-time-input-GENERATED_ID-minutes"
                            maxlength="2"
                            minlength="2"
                            name="timeMinutes"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                      </div>
                    </pdk-time-input>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
            <pdk-grid
              class="govuk-grid-column-one-half"
              one-half=""
            >
              <pdk-form-field
                hint=""
                label="End time (optional)"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       End time (optional) 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 10 30 
                      </div>
                    </pdk-hint>
                    <pdk-time-input
                      class="ng-untouched ng-pristine ng-valid"
                      data-role="courtroom-endTime"
                      labelhidden="false"
                      name="endTime"
                    >
                      <div
                        class="pdk-time-input ng-untouched ng-pristine ng-valid"
                      >
                        <div
                          class="pdk-time-input__item pdk-time-input__item--hour"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-hours"
                            pdk-label=""
                          >
                             Hours 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="hours"
                            id="pdk-time-input-GENERATED_ID-hours"
                            maxlength="2"
                            name="timeHours"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                        <div
                          class="pdk-time-input__item"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-minutes"
                            pdk-label=""
                          >
                             Minutes 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="minutes"
                            id="pdk-time-input-GENERATED_ID-minutes"
                            maxlength="2"
                            minlength="2"
                            name="timeMinutes"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                      </div>
                    </pdk-time-input>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
          </pdk-grid>
        </pdk-grid>
        <button
          class="govuk-button"
          data-role="apply-filters-btn"
          pdk-button=""
          type="submit"
        >
          Apply filters
        </button>
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
           Reset filters 
        </a>
      </form>
    </div>
  </courtrooms-filter>
</ng-component>
`;

exports[`CourtroomsFilterComponent should set options with the preselected values 1`] = `
<ng-component
  courtCentres={[Function Array]}
  formErrors={[Function Function]}
  onSelectCourtCentre={[Function Function]}
  onSubmit={[Function Function]}
  preselectedValues={[Function Object]}
>
  <courtrooms-filter>
    <div
      class="courtrooms-filter govuk-!-padding-3"
      pdk-padding="3"
    >
      <pdk-grid
        class="govuk-grid-column-full"
        full=""
      >
        <h2
          class="govuk-!-margin-bottom-1 govuk-heading-m"
          pdk-margin-bottom="1"
          pdk-typography="heading-medium"
        >
          Court calendar
        </h2>
      </pdk-grid>
      <form
        class="govuk-!-margin-top-1 ng-untouched ng-dirty ng-invalid"
        data-test-id="courtCalendarFilters"
        novalidate=""
        pdk-form=""
        pdk-margin-top="1"
      >
        <pdk-grid
          class="govuk-grid-row"
          container=""
        >
          <pdk-grid
            class="govuk-grid-column-one-half"
            one-half=""
          >
            <pdk-grid
              class="govuk-grid-column-three-quarters"
              three-quarters=""
            >
              <pdk-form-field
                label="Court"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="pdk-form-control-undefined-GENERATED_ID"
                  >
                     Court 
                  </label>
                  <pdk-autosuggest-lite
                    class="ng-untouched ng-pristine ng-invalid"
                    name="courtCentreId"
                    required=""
                  >
                    <pdk-autosuggest
                      highlightcolor="blue"
                    >
                      <pdk-interaction-container>
                        <div>
                          <div
                            class="pdk-autosuggest"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                              aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                              aria-expanded="false"
                              autocomplete="off"
                              class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                              id="pdk-form-control-undefined-GENERATED_ID"
                              role="combobox"
                              type="text"
                            />
                            <span
                              class="govuk-visually-hidden"
                              id="pdk-autosuggest__instructions-GENERATED_ID"
                              pdk-visually-hidden=""
                            >
                               When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                            </span>
                            <span
                              aria-live="polite"
                              class="govuk-visually-hidden"
                              pdk-visually-hidden=""
                              role="status"
                            >
                            </span>
                            <div
                              class="pdk-autosuggest__suggestions-container"
                              id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                            >
                            </div>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-autosuggest>
                  </pdk-autosuggest-lite>
                </pdk-form-group>
              </pdk-form-field>
              <pdk-form-field
                hint=""
                label="Date"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       Date 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 23 10 2017 
                      </div>
                    </pdk-hint>
                    <date-picker
                      class="ng-untouched ng-valid ng-dirty"
                      name="searchDate"
                      required=""
                    >
                      <div
                        class="datepicker"
                      >
                        <div
                          class="flex-column"
                        >
                          <pdk-date-input
                            class="ng-untouched ng-pristine ng-invalid"
                            name="datePicker"
                            picker=""
                            required=""
                          >
                            <pdk-interaction-container>
                              <div>
                                <div
                                  class="pdk-date-input"
                                >
                                  <div
                                    class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                                  >
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-day"
                                        pdk-label=""
                                      >
                                         Day 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                        formcontrolname="day"
                                        id="searchDate-day"
                                        name="dateDay"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-month"
                                        pdk-label=""
                                      >
                                         Month 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                        formcontrolname="month"
                                        id="searchDate-month"
                                        name="dateMonth"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                    <div
                                      class="govuk-date-input__item"
                                    >
                                      <label
                                        class="govuk-date-input__label govuk-label"
                                        for="searchDate-year"
                                        pdk-label=""
                                      >
                                         Year 
                                      </label>
                                      <input
                                        autocomplete="off"
                                        class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                        formcontrolname="year"
                                        id="searchDate-year"
                                        name="dateYear"
                                        required=""
                                        type="number"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="pdk-!-negative-margin-left-2"
                                    pdk-margin-left="-2"
                                  >
                                    <pdk-date-picker-toggle>
                                      <pdk-interaction-container>
                                        <div>
                                          <div
                                            aria-expanded="false"
                                            aria-label="Toggle date picker"
                                            class="pdk-date-picker__toggle"
                                            role="button"
                                            tabindex="0"
                                          >
                                            <pdk-date-picker-icon
                                              style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                            >
                                              <div
                                                style="display: flex; align-items: center; justify-content: center;"
                                              >
                                                <i
                                                  style="height: 28px; width: 28px; fill: #333;"
                                                >
                                                  <svg
                                                    viewBox="0 0 448 512"
                                                    xmlns="http://www.w3.org/2000/svg"
                                                  >
                                                    <path
                                                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                                    />
                                                  </svg>
                                                </i>
                                              </div>
                                            </pdk-date-picker-icon>
                                          </div>
                                        </div>
                                      </pdk-interaction-container>
                                    </pdk-date-picker-toggle>
                                  </div>
                                </div>
                              </div>
                            </pdk-interaction-container>
                          </pdk-date-input>
                          <pdk-inset-text
                            class="govuk-!-margin-top-5 govuk-!-margin-bottom-1"
                            pdk-margin-bottom="1"
                            pdk-margin-top="5"
                            role="status"
                          >
                            <div
                              class="govuk-inset-text"
                            >
                               Selected day: Saturday 
                            </div>
                          </pdk-inset-text>
                        </div>
                      </div>
                    </date-picker>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
          </pdk-grid>
          <pdk-grid
            class="govuk-grid-column-one-half"
            one-half=""
          >
            <pdk-grid
              class="govuk-grid-column-three-quarters"
              three-quarters=""
            >
              <pdk-form-field
                label="Courtroom"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <label
                    class="govuk-label govuk-label--s"
                    for="pdk-form-control-undefined-GENERATED_ID"
                  >
                     Courtroom 
                  </label>
                  <pdk-autosuggest-lite
                    class="ng-untouched ng-pristine ng-valid"
                    fullwidth=""
                    name="courtRoomId"
                  >
                    <pdk-autosuggest
                      highlightcolor="blue"
                    >
                      <pdk-interaction-container>
                        <div>
                          <div
                            class="pdk-autosuggest"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                              aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                              aria-expanded="false"
                              autocomplete="off"
                              class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                              id="pdk-form-control-undefined-GENERATED_ID"
                              role="combobox"
                              type="text"
                            />
                            <span
                              class="govuk-visually-hidden"
                              id="pdk-autosuggest__instructions-GENERATED_ID"
                              pdk-visually-hidden=""
                            >
                               When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                            </span>
                            <span
                              aria-live="polite"
                              class="govuk-visually-hidden"
                              pdk-visually-hidden=""
                              role="status"
                            >
                            </span>
                            <div
                              class="pdk-autosuggest__suggestions-container"
                              id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                            >
                            </div>
                          </div>
                        </div>
                      </pdk-interaction-container>
                    </pdk-autosuggest>
                  </pdk-autosuggest-lite>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
            <pdk-grid
              class="govuk-grid-column-one-half"
              one-half=""
            >
              <pdk-form-field
                hint=""
                label="Start time (optional)"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       Start time (optional) 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 10 30 
                      </div>
                    </pdk-hint>
                    <pdk-time-input
                      class="ng-untouched ng-pristine ng-valid"
                      data-role="courtroom-startTime"
                      labelhidden="false"
                      name="startTime"
                    >
                      <div
                        class="pdk-time-input ng-untouched ng-pristine ng-valid"
                      >
                        <div
                          class="pdk-time-input__item pdk-time-input__item--hour"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-hours"
                            pdk-label=""
                          >
                             Hours 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="hours"
                            id="pdk-time-input-GENERATED_ID-hours"
                            maxlength="2"
                            name="timeHours"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                        <div
                          class="pdk-time-input__item"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-minutes"
                            pdk-label=""
                          >
                             Minutes 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="minutes"
                            id="pdk-time-input-GENERATED_ID-minutes"
                            maxlength="2"
                            minlength="2"
                            name="timeMinutes"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                      </div>
                    </pdk-time-input>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
            <pdk-grid
              class="govuk-grid-column-one-half"
              one-half=""
            >
              <pdk-form-field
                hint=""
                label="End time (optional)"
                labeltype="small"
              >
                <pdk-form-group
                  class="pdk-form-group"
                >
                  <fieldset
                    class="govuk-fieldset"
                    pdk-fieldset=""
                  >
                    <legend
                      class="govuk-fieldset__legend govuk-fieldset__legend--s"
                    >
                       End time (optional) 
                    </legend>
                    <pdk-hint
                      class="govuk-hint"
                    >
                      <div>
                         For example, 10 30 
                      </div>
                    </pdk-hint>
                    <pdk-time-input
                      class="ng-untouched ng-pristine ng-valid"
                      data-role="courtroom-endTime"
                      labelhidden="false"
                      name="endTime"
                    >
                      <div
                        class="pdk-time-input ng-untouched ng-pristine ng-valid"
                      >
                        <div
                          class="pdk-time-input__item pdk-time-input__item--hour"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-hours"
                            pdk-label=""
                          >
                             Hours 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="hours"
                            id="pdk-time-input-GENERATED_ID-hours"
                            maxlength="2"
                            name="timeHours"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                        <div
                          class="pdk-time-input__item"
                        >
                          <label
                            class="govuk-label"
                            for="pdk-time-input-GENERATED_ID-minutes"
                            pdk-label=""
                          >
                             Minutes 
                          </label>
                          <input
                            autocomplete="off"
                            class="ng-untouched ng-pristine ng-valid govuk-input govuk-input--width-2"
                            formcontrolname="minutes"
                            id="pdk-time-input-GENERATED_ID-minutes"
                            maxlength="2"
                            minlength="2"
                            name="timeMinutes"
                            pattern="[0-9]*"
                            type="text"
                          />
                        </div>
                      </div>
                    </pdk-time-input>
                  </fieldset>
                </pdk-form-group>
              </pdk-form-field>
            </pdk-grid>
          </pdk-grid>
        </pdk-grid>
        <button
          class="govuk-button"
          data-role="apply-filters-btn"
          pdk-button=""
          type="submit"
        >
          Apply filters
        </button>
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
           Reset filters 
        </a>
      </form>
    </div>
  </courtrooms-filter>
</ng-component>
`;
